<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_label">My Nanodegree Apps</string>
    <string name="btn_popular_movies_label">Popular Movies</string>
    <string name="btn_capstone_label">Capstone</string>
    <string name="btn_make_your_app_label">Make your app material</string>
    <string name="btn_go_ubiquitous_label">Go Ubiquitous</string>
    <string name="btn_build_it_big_label">Build it Bigger</string>
    <string name="btn_stock_hawk_label">Stock Hawk</string>
    <string name="toast_app_message">This button will launch my %1$s app.</string>
</resources>
