<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jpnardari.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_popular_movies_label"
        android:id="@+id/btn_popular_movies"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/btn_make_your_app"
        android:layout_alignStart="@+id/btn_make_your_app"
        android:layout_alignRight="@+id/btn_make_your_app"
        android:layout_alignEnd="@+id/btn_make_your_app" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stock_hawk_label"
        android:id="@+id/btn_stock_hawk"
        android:layout_below="@+id/btn_popular_movies"
        android:layout_alignLeft="@+id/btn_popular_movies"
        android:layout_alignStart="@+id/btn_popular_movies"
        android:layout_alignRight="@+id/btn_popular_movies"
        android:layout_alignEnd="@+id/btn_popular_movies" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_it_big_label"
        android:id="@+id/btn_build_it_big"
        android:layout_below="@+id/btn_stock_hawk"
        android:layout_alignLeft="@+id/btn_stock_hawk"
        android:layout_alignStart="@+id/btn_stock_hawk"
        android:layout_alignRight="@+id/btn_stock_hawk"
        android:layout_alignEnd="@+id/btn_stock_hawk" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_make_your_app_label"
        android:id="@+id/btn_make_your_app"
        android:layout_below="@+id/btn_build_it_big"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_ubiquitous_label"
        android:id="@+id/btn_go_ubiquitous"
        android:layout_below="@+id/btn_make_your_app"
        android:layout_alignLeft="@+id/btn_make_your_app"
        android:layout_alignStart="@+id/btn_make_your_app"
        android:layout_alignRight="@+id/btn_make_your_app"
        android:layout_alignEnd="@+id/btn_make_your_app" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone_label"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_go_ubiquitous"
        android:layout_alignLeft="@+id/btn_go_ubiquitous"
        android:layout_alignStart="@+id/btn_go_ubiquitous"
        android:layout_alignRight="@+id/btn_go_ubiquitous"
        android:layout_alignEnd="@+id/btn_go_ubiquitous" />

</RelativeLayout>
